--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         },
         mounted: async function(){
             await liff.init({
-                liffId: "2004727608-aZejr9x5"
+                liffId: ""
             }).then(()=>{
                 if (liff.isLoggedIn()) {
                     console.log("ログイン済");
