--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     // LIFF初期化
                     document.addEventListener('DOMContentLoaded', function () {
                         liff.init({
-                            liffId: '2006421896-Dz9B3O1p' // ここにあなたのLIFF IDを入力
+                            liffId: '2006813144-gZrP067a' // ここにあなたのLIFF IDを入力
                         }).then(() => {
                             // LIFF初期化成功時の処理
                             console.log('LIFF初期化成功');
